--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768225.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/VCG111262611086-600x400-320x200.jpg">阴霾袭华北黄淮汾渭 69城发重污染预警</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768179.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/15e6c57aa9fedfcc_ttl7dayAji_41a39446e88d8643-320x200.jpg">【热点互动】台大选关键时刻 反渗透防变色？</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764607.md#1">“中国淡水鱼之王”长江白鲟被宣告灭绝</a><br>
@@ -30,9 +30,10 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768186.md#1">【新闻看点】台湾大选谁赢 北京都遇难题</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768297.md#1">武汉爆不明病毒性肺炎 全球戒备</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768207.md#1">新加坡现首例武汉肺炎 港府提升应对级别</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768186.md#1">【新闻看点】台湾大选谁赢 北京都遇难题</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768225.md#1">阴霾袭华北黄淮汾渭 69城发重污染预警</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11751194.md#1">【2019盘点】响彻世界政坛的正义之声</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768074.md#1">周晓辉：更换中联办主任 中南海仍避重就轻</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768058.md#1">习近平谈中共领导人更替 接班人制再引关注</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767902.md#1">香港中联办主任王志民被免职</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766968.md#1">武汉不明肺炎 专家：疫情越封锁越难防疫</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766999.md#1">中共警察强制中小学男生抽血 建DNA数据库</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767498.md#1">武汉肺炎疫情蔓延 香港专家：恐已人传人</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768055.md#1">川普击毙伊朗二号人物 对中共释何种信号</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768112.md#1">担心国安风险 美五大军种全面禁用抖音</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768034.md#1">美摄影教授被拒入境香港 曾拍摄抗议照片</a><br>
@@ -49,6 +49,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767938.md#1">广西南宁一幼儿园老师虐童</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767073.md#1">2019年前11个月 大陆车市产销量同比下降</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767110.md#1">程晓容：长江白鲟灭绝 中共乃危机源头</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767498.md#1">武汉肺炎疫情蔓延 香港专家：恐已人传人</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱玛尼被击毙 他是什么人？</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767423.md#1">大批明星搭机资料遭国航员工泄露</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760693.md#1">蒋经国一生反共信念的历程</a><br>
@@ -87,9 +88,8 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765382.md#1">云南省委办公厅前主任张朝德被查</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764905.md#1">新年第三天 哈尔滨一公交车辗压死一男子</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764722.md#1">传中共因政治因素停止沪伦通运作</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765081.md#1">中国工程院院士李宁涉贪被判刑12年</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/ffbns289/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764921.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/607925ade52066b8247bcf9d3b9cff9a-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764921.md#1">中国滑雪队要挪威图书馆下架法轮功书籍遭拒</a><br>近期在挪威进行训练的中国滑雪代表队 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761238.md#1">穿越非洲抵美 山东维权人士万里大逃亡（下）</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763908.md#1">泼墨女董瑶琼获释出院 神情紧张痴呆</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763896.md#1">“一人炼功全家受益”澳洲法轮功学员谢师恩</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763905.md#1">遭拘15日 中国劳工维权者陈伟祥等3人获释</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762641.md#1">法轮功学员杨胜军被迫害致死 律师举报控告</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764605.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/05/gettyimages-1145445372-594x594-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764605.md#1">贸易战加资本寒冬 大陆科技界面临更大动荡</a><br>大陆科技界在2019年面临了美国的严厉 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11764223.md#1">中共“铁路大跃进”刺激经济将带来遗祸? ?</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763875.md#1">【新闻看点】川普称1/15签约 北京为何沉默</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763989.md#1">大陆现史上年度最早地方债 1月预超8000亿</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763597.md#1">国际品牌Zara武汉店无预兆全关 被贴封条</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763707.md#1">今年买股前 专家建议仔细研究这个国家</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764982.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/cui-zhenjie_7-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764982.md#1">涉黑并贪腐逾亿 吉林市政协前主席获刑20年</a><br>中共吉林省吉林市政协前党组书记、主 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764759.md#1">涉权色交易私藏枪支 长沙银行前副行长被双开</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763785.md#1">7.21警黑勾结 中共鼓励港警流氓化</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11764071.md#1">华谊老板致员工信责影视团队：失误堪称致命</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763655.md#1">林夕歌曲作词人变佚名 网民斥中共电视台无耻</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763800.md#1">禁中共黑客盗窃 纳入美中第二阶段贸易谈判</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766765.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/15e6905677394b9b_ttl7dayXor_tn0103-xxx-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766765.md#1">【拍案惊奇】武汉肺炎例增 SARS阴影港台预防</a><br>2020注定不平凡，新年刚一开始，就发 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764607.md#1">“中国淡水鱼之王”长江白鲟被宣告灭绝</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764667.md#1">兰州至少181人染布病 污染源周围居民区密集</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764462.md#1">武汉爆发不明疫情 口罩板蓝根全抢光</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763959.md#1">2020脱贫年 中共多地强制脱贫丑闻百出</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763828.md#1">武汉爆发似SARS“不明肺炎”民众如何防范？</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763973.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/200102150621100699-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763973.md#1">盘点2019美国经济 进入史上最长增长期</a><br>美国经济在2019年体现出强大的抗压性 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764636.md#1">每日三退声明精选（2020/01/02）</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763603.md#1">重庆元旦着火高楼涉神秘发展商</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762158.md#1">4.7亿美元假耐克鞋入美 华人作案手法曝光</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762029.md#1">新年北京昌平强拆 百余村民上访遭威胁</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761858.md#1">每日三退声明精选（2020/01/01）</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761587.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/kindergarten-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761587.md#1">红歌代替儿歌 大陆幼童也要宣示效忠</a><br>儿歌变“红歌”，中国大陆幼稚园被强 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748178.md#1">【直播回放】新唐人电视台2020跨年缤纷夜</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756680.md#1">年末关门潮 山东等三省报刊明年起停刊</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754599.md#1">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754408.md#1">基因编辑婴儿 贺建奎涉非法行医获刑3年</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758321.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8YG-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br>抖音国际版TikTok正在引起越来越多的 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760851.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/mmexport1574158876716-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br>中共当局曾夸海口：“2020全面奔小康 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764921.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/607925ade52066b8247bcf9d3b9cff9a-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764921.md#1">中国滑雪队要挪威图书馆下架法轮功书籍遭拒</a><br>近期在挪威进行训练的中国滑雪代表队 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11761238.md#1">穿越非洲抵美 山东维权人士万里大逃亡（下）</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763908.md#1">泼墨女董瑶琼获释出院 神情紧张痴呆</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763896.md#1">“一人炼功全家受益”澳洲法轮功学员谢师恩</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763905.md#1">遭拘15日 中国劳工维权者陈伟祥等3人获释</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762641.md#1">法轮功学员杨胜军被迫害致死 律师举报控告</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764605.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/05/gettyimages-1145445372-594x594-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764605.md#1">贸易战加资本寒冬 大陆科技界面临更大动荡</a><br>大陆科技界在2019年面临了美国的严厉 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11764223.md#1">中共“铁路大跃进”刺激经济将带来遗祸? ?</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763875.md#1">【新闻看点】川普称1/15签约 北京为何沉默</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763989.md#1">大陆现史上年度最早地方债 1月预超8000亿</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763597.md#1">国际品牌Zara武汉店无预兆全关 被贴封条</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763707.md#1">今年买股前 专家建议仔细研究这个国家</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764982.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/cui-zhenjie_7-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764982.md#1">涉黑并贪腐逾亿 吉林市政协前主席获刑20年</a><br>中共吉林省吉林市政协前党组书记、主 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765081.md#1">中国工程院院士李宁涉贪被判刑12年</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764759.md#1">涉权色交易私藏枪支 长沙银行前副行长被双开</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763785.md#1">7.21警黑勾结 中共鼓励港警流氓化</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11764071.md#1">华谊老板致员工信责影视团队：失误堪称致命</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763655.md#1">林夕歌曲作词人变佚名 网民斥中共电视台无耻</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766765.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/15e6905677394b9b_ttl7dayXor_tn0103-xxx-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766765.md#1">【拍案惊奇】武汉肺炎例增 SARS阴影港台预防</a><br>2020注定不平凡，新年刚一开始，就发 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764607.md#1">“中国淡水鱼之王”长江白鲟被宣告灭绝</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764667.md#1">兰州至少181人染布病 污染源周围居民区密集</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764462.md#1">武汉爆发不明疫情 口罩板蓝根全抢光</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763959.md#1">2020脱贫年 中共多地强制脱贫丑闻百出</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763828.md#1">武汉爆发似SARS“不明肺炎”民众如何防范？</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763973.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/200102150621100699-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763973.md#1">盘点2019美国经济 进入史上最长增长期</a><br>美国经济在2019年体现出强大的抗压性 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764636.md#1">每日三退声明精选（2020/01/02）</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763603.md#1">重庆元旦着火高楼涉神秘发展商</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762158.md#1">4.7亿美元假耐克鞋入美 华人作案手法曝光</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762029.md#1">新年北京昌平强拆 百余村民上访遭威胁</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761858.md#1">每日三退声明精选（2020/01/01）</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761587.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/kindergarten-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761587.md#1">红歌代替儿歌 大陆幼童也要宣示效忠</a><br>儿歌变“红歌”，中国大陆幼稚园被强 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748178.md#1">【直播回放】新唐人电视台2020跨年缤纷夜</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11756680.md#1">年末关门潮 山东等三省报刊明年起停刊</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754599.md#1">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754408.md#1">基因编辑婴儿 贺建奎涉非法行医获刑3年</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11749809.md#1">李荣浩叹人的坏没底线 邓紫棋用诗性歌词回应</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758321.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1MG8YG-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br>抖音国际版TikTok正在引起越来越多的 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/6/n11706347.md#1">反送中和六四事件 美政府应对措施对比</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760851.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/mmexport1574158876716-150x120.jpg"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br>中共当局曾夸海口：“2020全面奔小康 ...<br><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11742110.md#1">发表撑港灭共言论 大陆多名公民遭刑拘</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/18/n11731023.md#1">粤村民汽油弹攻政府视频曝光 目击者描述现场</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
