--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -1,7 +1,4 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ffbns289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ffbns289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://hua.vcfkoo.ga/hua/7" rel="nofollow">大纪元</a> | <a href="https://hua.vcfkoo.ga/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://hua.vcfkoo.ga/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://hua.vcfkoo.ga/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://hua.vcfkoo.ga/hua/11" rel="nofollow">看中国</a> | <a href="https://hua.vcfkoo.ga/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://hua.vcfkoo.ga/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://hua.vcfkoo.ga/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ffbns289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/ffbns289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754433.md#1" target="_blank">俞晓薇：明慧新年祝福值得中国和世界深思</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754433.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019-12-28-1912210523254535-150x120.jpg" align ="left"></a>岁末，祝福与感恩热潮再现于明慧网——中国大陆及海外的法轮功学员恭祝法轮功创始人李洪志大师新年快乐。众多学员的亲属等各界人士也发出贺信，感谢李洪志大师、感谢法轮功。在道德下滑、纷争动荡的今日，法轮大法正在从根本上净化人心、净化世界，意义深远。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 11:13 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11764288.md#1" target="_blank">东方觉：犯罪集团之恶与“保护伞”之黑</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11764288.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/d0d6-hyvnhqq0677385-800x450-1-150x120.jpg" align ="left"></a>最近，震惊全国的湖南新晃一中“操场埋尸案”被判，两名罪犯，一个死刑立即执行，一个死缓。沉冤16年的邓世平总算昭雪。有人说是“迟到的正义”，但此案令人叹息更在于，正义不该迟到，至少不该迟到这么久。一桩案情原本不复杂的案件，一桩当地很多人心知肚明的案件偏偏无法侦破，一拖16年。16年来，由于“保护伞”的违法庇护，罪犯杜少平.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 8:07 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763805.md#1" target="_blank">【名家专栏】写在《五月花号公约》400周年</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763805.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-51246962-150x120.jpg" align ="left"></a>2020年是《五月花号公约》（the Mayflower Compact）签署的400周年纪念年。该协议由41位朝圣先辈（Pilgrim Fathers）于1620年签署，是承载美国建国自治历史文件中的第一份。《五月花号公约》创建了一个先例，即政府是基于被统治者的许可而成立的，而且以法治国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 7:12 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763884.md#1" target="_blank">周晓辉：川普下通牒 北京纠结三大难题</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763884.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1DP3PX-1-150x120.jpg" align ="left"></a>美国当地时间12月31日，美国总统川普（特朗普）发推表示：“我将在1月15日与中国签署一项非常庞大而全面的第一阶段贸易协议。该仪式将在白宫举行。中方高层代表将出席。”“稍后我将去北京，第二阶段（贸易协议）的对话将开始！”
 
 随后，川普在佛州海湖庄园参加新年庆祝活动前，就国际国内一些问题回答了记者的提问。在美中贸易问.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 4:22 AM			</td></tr>
@@ -27,22 +24,11 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760290.md#1" target="_blank">袁斌：香港花季少女之死告诉你中共有多邪</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760290.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010409301501-150x120.jpg" align ="left"></a>9月22日，香港15岁花季少女陈彦霖被发现浮尸海上后，警方放风是自杀，但种种疑点却使人怀疑是他杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 6:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760118.md#1" target="_blank">颜智华：北京医生被杀 背后或掩盖医疗黑幕</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760118.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/12/51201172533459-150x120.jpg" align ="left"></a>??2019年12月24日发生在北京民航总医院急诊部的杀害女医生杨文案件，凶手孙文斌55岁，是在该医院急诊部留诊了20天的95岁高龄女患者孙某氏的儿子。作案手段极其残忍血腥，用刀几乎割断了医生的脖颈。案件震惊了中国朝野上下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 5:04 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759935.md#1" target="_blank">李铭：恭祝李大师新年好 世人感激大法洪恩</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759935.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/2018-12-27-la-new-year-greetings_01-600x397-600x397-150x120.jpg" class=" align ="left"></a>二零二零新年来临之际，中国大陆与世界各国的民众纷纷向明慧网寄发新年贺卡与祝福语，诚心敬祝法轮功创始人李洪志先生新年快乐，期盼李大师早日回国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 3:56 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764382.md#1" target="_blank">关乐：赞香港元旦百万和平抗暴大游行</a><br></h3>二零二零元旦，
-上街再破百万。
-隆冬春潮驱寒，
-中南海冰裂颤。
-冰刀半途腰斩，
-只会推波助澜。
-挑事造事滥抓，
-港府泥潭深陷。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 8:34 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11764245.md#1" target="_blank">云鹤天：扶贫</a><br></h3>和朋友聊天
-聊扶贫攻坚
-二零二零年
-扶贫攻坚年
-疑惑问朋友
-脱贫可实现
-朋友笑我痴
-脑子被水淹......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 7:10 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754554.md#1" target="_blank">新元赋——退党中心2020新年寄语</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754554.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1910201839251973-150x120.jpg" align ="left"></a>太初之始，阴阳是生。中有神州，肇自鸿蒙。得天地之覆载，蒙神明之护佑，崇文明之圣教，承道德之大统。于是五帝建号华夏，三王礼乐布政，汉唐万邦来朝，两宋文明化成，元明有清继往开拓，运化五千中华古风。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 3:49 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759747.md#1" target="_blank">横河：台湾反渗透法对两岸的冲击</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759747.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/a80d264464183189dbb2df130c4650a4-150x120.jpg" align ="left"></a>台湾计划年底前通过《反渗透法》，为什么会不仅引起中共愤怒，也引发台湾内部争论。反对的理由是否成立？面对中共渗透控制，台湾和美澳等西方民主国家有何异同？为何世界各国都相对缺少反渗透的法律？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 3:23 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759583.md#1" target="_blank">【名家专栏】美国真正的“自由红利”是什么</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759583.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1189640453-webcrop-1200x720-150x120.jpg" align ="left"></a>民主党总统候选人杨安泽（Andrew Yang）说对了一件事：美国人可以享受巨大的“自由红利”——也就是说，这会是一种有保障的收入来源，他们可以月复一月地依赖这种收入，不受就业市场和就业形势的不确定性影响。但是，就像许多民主党人的想法一样，杨安泽原本卓越的洞察力被一种意识形态所腐蚀，这种意识形态很奇怪地将政府视为创造和.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 3:03 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759180.md#1" target="_blank">【名家专栏】川普能让美国“破蛋重圆”吗?</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759180.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1190467598-150x120.jpg" align ="left"></a>我不是诺查丹玛斯，真的，但我仍然很确信，尽管不可避免地会出现一些小问题，唐纳德?川普（特朗普）总统不会被参议院弹劾罢免，并将在明年11月赢得总统大选连任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 11:08 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11750552.md#1" target="_blank">美国抗共人物系列：亚太助理国务卿史达伟</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/28/n11750552.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/12-27-DavidStilwell-Cover02-150x120.jpg" align ="left"></a>2019年就要过去了，回首这一年美中之间发生的大事件，不难发现美国“全面遏止中共”已经成为主旋律，无论是在经济、科技，还是全球的政治影响力，美国突然警醒，走向与中共全面战略竞争化的道路。作为这一系列节目的开篇，我们要介绍的是美国国务院亚太助理国务卿史达伟（David Stilwell）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 6:19 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762112.md#1" target="_blank">雪绮：见群鸡退鹰  反观中共末日</a><br></h3>美国伊利诺州一座农场的鸡舍，被妄欲享受饱食鸡肉大餐的老鹰闯入，却未料竟反遭鸡群围剿、无路可逃，终狼狈离场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月02日 2:13 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11761788.md#1" target="_blank">金浴凤：元旦寄语迷中帝</a><br></h3>打虎威振山河动，贪权足陷蟾迷宫；
 思圄破残马列里，道惑倿嬖左右中；
