--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -26,7 +26,10 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759960.md#1" target="_blank">程晓容：惧《反渗透法》中共偷换焦点渲染恐怖</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759960.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/420148-150x120.jpg" align ="left"></a>12月31日，台湾立法院会三读通过《反渗透法》，在台海两岸引发震荡。支持者表示欣慰，中共国台办和官媒进行抨击。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:03 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760290.md#1" target="_blank">袁斌：香港花季少女之死告诉你中共有多邪</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760290.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912010409301501-150x120.jpg" align ="left"></a>9月22日，香港15岁花季少女陈彦霖被发现浮尸海上后，警方放风是自杀，但种种疑点却使人怀疑是他杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 6:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760118.md#1" target="_blank">颜智华：北京医生被杀 背后或掩盖医疗黑幕</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760118.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2005/12/51201172533459-150x120.jpg" align ="left"></a>??2019年12月24日发生在北京民航总医院急诊部的杀害女医生杨文案件，凶手孙文斌55岁，是在该医院急诊部留诊了20天的95岁高龄女患者孙某氏的儿子。作案手段极其残忍血腥，用刀几乎割断了医生的脖颈。案件震惊了中国朝野上下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 5:04 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759935.md#1" target="_blank">李铭：恭祝李大师新年好 世人感激大法洪恩</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11759935.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/02/2018-12-27-la-new-year-greetings_01-600x397-600x397-150x120.jpg" class=" align ="left"></a>二零二零新年来临之际，中国大陆与世界各国的民众纷纷向明慧网寄发新年贺卡与祝福语，诚心敬祝法轮功创始人李洪志先生新年快乐，期盼李大师早日回国。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 3:56 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764415.md#1" target="_blank">林泉：香江之歌</a><br></h3>美丽香江城，雄伟狮子峰。
+九七落魔掌，从此无太平。
+中共施恶法，欲变红魔城。
+全民反送中，民众已觉醒。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 11:22 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764382.md#1" target="_blank">关乐：赞香港元旦百万和平抗暴大游行</a><br></h3>二零二零元旦，
 上街再破百万。
 隆冬春潮驱寒，
