--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -53,7 +53,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767110.md#1">程晓容：长江白鲟灭绝 中共乃危机源头</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11766999.md#1">中共警察强制中小学男生抽血 建DNA数据库</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767498.md#1">武汉肺炎疫情蔓延 香港专家：恐已人传人</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱玛尼被击毙 他是什么人？</a><br>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767423.md#1">大批明星搭机资料遭国航员工泄露</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/1/n11760693.md#1">蒋经国一生反共信念的历程</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767304.md#1">赵正永的大管家 陕西前副省长陈国强被双开</a><br>
@@ -93,7 +93,7 @@
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/ffbns289/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
-- 共 349,244,672 人
+- 共 349,245,759 人
 ```
 </strong>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/11/19/n11666092.md#1">九评15周年 看大陆民众弃中共 句句真情</a><br>
