--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -31,7 +31,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763828.md#1" target="_blank">武汉爆发似SARS“不明肺炎”民众如何防范？</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763828.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/pneumonia-010220-150x120.jpg" align ="left"></a>武汉近日爆发“不明病毒性肺炎”，民众担忧多年前夺走数百条人命的SARS（严重急性呼吸道症候群）重现。由于中共官方一向有隐瞒疫情的前科，专家建议身在疫区或近日前往当地的民众一定要做好防范。为因应武汉市的肺炎流行疫情，台湾已对武汉直航的班机进行登机检疫，希望将疫情阻绝于境外。面对不明肺炎 民众如何防范？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:29 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763808.md#1" target="_blank">家被强拆父母冤死 男子出狱报复致1死2伤</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763808.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/33-150x120.jpeg" align ="left"></a>新年首日，江苏仪征市刘集镇发生一起命案，凶手为曾因强拆上访坐牢的彭在林，出狱之后将村支书女儿以及当年的拆迁者2人杀伤，凶手自杀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 2:20 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763775.md#1" target="_blank">打砸店面 破坏者向港警喊“自己人”获放行</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11763775.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1191139445-150x120.jpg" align ="left"></a>香港2020元旦大游行，港警撕毁不反对通知书的承诺将游行腰斩，但街头仍再现百万人上街的壮观场面。但这一场原本和平的抗争却引来警方的暴力介入。游行期间，疑似有港警冒充示威者打杂店面，被追问下反而逃向一帮防暴警察并高呼“自己人”，即获放生。引发外界强烈质疑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 1:35 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11765382.md#1" target="_blank">云南省委办公厅前主任张朝德被查</a><br></h3>1月2日，中共云南省政协文化文史和学习委员会副主任张朝德涉嫌“严重违纪违法”，目前正接受调查。他是由已落马的前云南省委前书记秦光荣一手提拔，被指是秦主政云南时的“大管家”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 6:52 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762641.md#1" target="_blank">法轮功学员杨胜军被迫害致死 律师举报控告</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/2/n11762641.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/11-1-150x120.jpg" align ="left"></a>2019年12月26日，佳木斯法轮功学员杨胜军的辩护律师谢燕益向佳木斯市监察委员会提交了“紧急报案举报控告专函”，控告佳木斯市公安局等部门非法拘禁和致死杨胜军的违法行为。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 1:16 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764905.md#1" target="_blank">新年第三天 哈尔滨一公交车辗压死一男子</a><br></h3>1月3日，哈尔滨市一辆公交车将一名男子撞倒辗压。该男子当场死亡。
 
 哈尔滨日报报导，今天（3日）早上8时许，在哈尔滨市道里区群力第一大道与朗江路处，一辆209公交车刚从始发站出来，在转弯时，将一名正在从斑马线上过马路的中年男子撞倒并辗压。
