--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -23,7 +23,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11744130.md#1" target="_blank">文静：不流血不牺牲解体中共恶党的最好办法</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11744130.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/20180409-hsichiao-hk-01-600x400-150x120.jpg" align ="left"></a>中国大陆这两年网络管控越来越严，稍稍说一点对现实不满或批评的言论，轻则删号，重则被请喝茶和拘留。中共放出五毛、粉红和网评员，对网友的言论监视举报，经常有人暴出被派出所找去，网络上的敏感词越来越多，被删贴被炸号越来越严重，网友们对如此的状况又气愤又无奈。网友们愤怒的把那些举报者叫举报狗和蛆，他们截屏人家的贴子，举报、骂人.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:03 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11743741.md#1" target="_blank">袁斌：是中共发言人而不是别人在编造闹剧</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11743741.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/5c7775e5c84b3862d88dfe295b764e53@1200x1200-150x120.jpg" align ="left"></a>日前，英国伦敦一名叫弗洛伦斯·维迪科姆的6岁女童打开从大型超市便利店连锁Tesco（中国前称乐购，又译特易购）购买的圣诞贺卡，准备给同学写祝福时，不料竟突然发现其中一张贺卡已经“写好了”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:35 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11743719.md#1" target="_blank">【名家专栏】2020：中共性命攸关的一年</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/24/n11743719.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-871930170-600x400-150x120.jpg" align ="left"></a>有句俗话说：“一只受伤的熊，要比一只健康的熊更危险。”（或者在当前情况下，是熊猫？）这句广为流传的格言背后的逻辑很简单，那就是说，甚至是软弱的对手一旦被逼入绝境，都更有可能以更加绝望和不可预测的方式行事。因此，它们可能给竞争对手带来更大的风险。当然，这只是一个概括的说法，但无疑，其中也存在着一些智慧。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 7:24 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/22/n11738958.md#1" target="_blank">【2019盘点】中共军事扩张 难挽危局</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/22/n11738958.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/1804260453522378-150x120.jpg" align ="left"></a>2019年中共军事领域动作频繁。在庞大的军费支撑下，首艘自制航母服役、北斗三号全球系统核心星座建成等，标志着中共军队武器装备系统和国防科工系统的持续扩张；两次大阅兵、军改后的首部国防白皮书、强化南海军事部署、升级对台军事威胁等等，将其全球野心暴露无遗；中俄军事合作提升，中美军事竞争加剧，而中共仍强硬拒绝参加中美俄三方军.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 5:49 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748446.md#1" target="_blank">文武：中共妄图顽抗到2020年12月底</a><br></h3>大共大限将至，谁都知道中共要完蛋了，但是中共却不甘心，还想妄图顽抗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月27日 1:24 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/27/n11748411.md#1" target="_blank">吐为快：挥别二O一九</a><br></h3>港遭蹂躏魂魄丧，党临末日分外狂
 非我族类岂怜悯，为延残喘狗跳墙
 明珠有泪傀煽情，被杀无声官诌谎
