--- a/gb/ncid282_2.md
+++ b/gb/ncid282_2.md
@@ -24,7 +24,7 @@
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745421.md#1" target="_blank">X射线机辐射超标 重庆一医院十多名职工患癌</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745421.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-175051588-150x120.jpg" align ="left"></a>重庆市沙坪坝区中医院有17名职工患癌。其中一台移动X射线机辐射疑超标8000倍。一患癌医生怀疑，医院癌症高发生率与电离辐射泄漏有关。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 10:39 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745418.md#1" target="_blank">卖假笔记本电脑电池 美华人或坐牢50年</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745418.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/b7798355ec5646f32805f38dbb8e96f0-150x120.jpg" align ="left"></a>美国司法部两天内密集刊出三条起诉中国产假货的公告，当事人涉嫌通过电子商务平台、直接对美国的消费者进行售卖。假货类别覆盖科技产品，如笔记本电脑电池，也有常见的流行饰品，如珠宝或太阳镜，甚至还有减肥以及男性伟哥类产品。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 6:08 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745357.md#1" target="_blank">李小龙女儿起诉大陆真功夫餐厅 索赔逾2亿元</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11745357.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/1910180847022188-150x120.jpg" align ="left"></a>12月25日，以李小龙女儿Shannon Lee（中文名：李香凝）为法人代表的李小龙有限责任公司（Bruce Lee Enterprises, LLC），向上海市第二中级法院提起侵权诉讼，向使用酷似李小龙形象图标长达15年的大陆餐饮品牌“真功夫”索赔2.1亿元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月26日 4:32 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11744743.md#1" target="_blank">蔡英文：台湾忧中共渗透 反渗透法不是戒严</a><br></h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/25/n11744743.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/PO_X7847-150x120.jpg" align ="left"></a>立法院民进党团预计在12月31日的院会上，拼“反渗透法”三读通过。总统蔡英文25日在总统候选人政见发表会提到，像反渗透法这样的立法，许多民主国家已经在做，“把反渗透法当作戒严，北京会欣慰，但国际社会将觉得不可思议。”她也说，若不认同该法案的立法，应提出具体的说明，“不应只有空洞的形容词。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 10:23 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754591.md#1" target="_blank">每日三退声明精选（2019/12/29）</a><br></h3>太坑人了，家被拆，无处申冤！为了生活选择工作还被抓进监狱，没有房可住，微薄的退休金还是最低的双轨制，都不敢得病，怕死不起！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 3:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752699.md#1" target="_blank">北京女医生遇害细节曝光 遭“拉锯式”割颈</a><br></h3>北京市朝阳区民航总医院女医生杨文24日遭病人家属孙文斌用刀割喉死亡。陆媒近日披露其被杀的细节：孙用刀刺中她颈部后，再多次“拉锯式”切割，将她的颈部肌肉及气管锯断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 6:43 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752654.md#1" target="_blank">长沙动物园发生大象踩人事故 一驯兽员身亡</a><br></h3>12月24日下午1点20分许，湖南长沙生态动物园大象驯养场内，一头大象突然发狂，将一名驯兽员卜某踩死。动物园目前已将该大象隔离，有动物专家怀疑大象是发情所致。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 4:33 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/29/n11752467.md#1" target="_blank">充电时手机爆炸 浙江男子被烧致面目全非</a><br></h3>近日，浙江海宁市民王先生半躺在床上休息时，拿起正放在床头柜上充电的手机，就在他拿起手机的一刹那，手机突然发生爆炸，致使他身上多处被烧伤，脸部几乎面目全非。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 3:24 PM							</td></tr>
