--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11766230.md#1">杭州政府要求全民储粮 被指转嫁粮食危机</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/30/n11754403.md#1">天津强拆世界级别墅群 数百业主走投无路</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769383.md#1">川人：精准除恶，川普的果敢行动让人敬佩</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11768861.md#1">高天韵：日剧《北国情》跨越21年的经典</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11769323.md#1">陈思敏：中共时隔10年放行主粮转基因的背后</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/5/n11768600.md#1">黄天辰：恐怖组织头目被美击毙 惊吓了谁</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11768047.md#1">王友群：美国“斩首”索莱马尼 一石四鸟</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767482.md#1">廖祖笙：饿饭党说要“全面建成小康社会”</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/4/n11767385.md#1">【名家专栏】主流媒体的新年决心：停止撒谎</a><br>
-<a href="https://github.com/ffbns289/djy/blob/master/gb/20/1/3/n11764911.md#1">【名家专栏】浅析十年来美国主要经济论点</a><br>
 <br><p><a href="https://github.com/ffbns289/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/ffbns289/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
